# RepoLens

./: CMakeLists.txt  LICENSE  README.md  install_Linux.sh  install_Windows10.sh  install_Windows11.sh  install_macOS.sh
include/repolens/: file_scanner.hpp  sqlite_database.hpp  version.hpp
include/repolens/interpreters/: apple_interpreter.hpp  build_file_interpreter.hpp  cpp_interpreter.hpp  csharp_interpreter.hpp  devops_interpreter.hpp  go_interpreter.hpp  interpreter_registry.hpp  jvm_interpreter.hpp  language_interpreter.hpp  matlab_interpreter.hpp  php_interpreter.hpp  python_interpreter.hpp  r_interpreter.hpp  ruby_interpreter.hpp  rust_interpreter.hpp  shell_interpreter.hpp  sql_interpreter.hpp  web_interpreter.hpp  xml_interpreter.hpp
src/: apple_interpreter.cpp  build_file_interpreter.cpp  cpp_interpreter.cpp  csharp_interpreter.cpp  devops_interpreter.cpp  file_scanner.cpp  go_interpreter.cpp  interpreter_registry.cpp  jvm_interpreter.cpp  main.cpp  matlab_interpreter.cpp  php_interpreter.cpp  python_interpreter.cpp  r_interpreter.cpp  ruby_interpreter.cpp  rust_interpreter.cpp  shell_interpreter.cpp  sql_interpreter.cpp  sqlite_database.cpp  web_interpreter.cpp  xml_interpreter.cpp
